editar corregido (select de clinicas con error )

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "jquery": "~1.11.1",
     "datatables": "~1.10.6",
     "bootstrap": "~3.3.4",
-    "growl": "~1.2.5"
+    "growl": "~1.2.5",
+    "validate": "~0.7.1"
   }
 }
